--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "glob-all": "^3.1.0"
+    "glob-all": "^3.1.0",
+    "jquery": "^3.3.1"
   },
   "author": "",
   "license": "ISC"
