--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.9.0",
@@ -51,7 +51,6 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "glob-all": "^3.1.0",
     "jquery": "^3.3.1"
   },
   "author": "",
